--- a/blog/templates/blog/post-detail.html
+++ b/blog/templates/blog/post-detail.html
@@ -25,8 +25,23 @@
      
         {% endfor %}
       </div>
-      <div>
-          <button>Read Later</button>
+      <div id="read-later">
+          <form action="{% url "read-later" %}" method="POST">
+              {% csrf_token %}
+            <input type="hidden" name="post_name" value="{{post.id}}">
+            <button>
+
+                {% if saved_for_later %}
+                
+                Delete from Saved Posts
+                {% else %}
+                Read Later
+                
+                {% endif %}
+
+            </button>
+          </form>
+          
       </div>
        
    
