--- a/templates/base.html
+++ b/templates/base.html
@@ -24,6 +24,7 @@
             <h1><a href="{% url "starting-page" %}">PP's Blog</a></h1>
             <nav>
               <a href="{% url "posts-page" %}">All Posts</a>
+              <a href="{% url "read-later" %}">Stored Posts</a>
             </nav>
           </header>
         {% block content %}
