tags styling done

--- a/blog/templates/blog/post-detail.html
+++ b/blog/templates/blog/post-detail.html
@@ -19,7 +19,7 @@
     </h2>
       <div>
         {% for tag in tags %}
-        <span class="tags">
+        <span class="tag">
             {{ tag.captions}}
         </span>
      
